--- a/PVB Stage Applicatie/Views/Koppeling/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Koppeling/Index.cshtml
@@ -6,53 +6,61 @@
 @if (User.IsInRole("Beheerder"))
 {
     @section zijMenu{
-            <li>@Html.ActionLink("Nieuwe koppeling", "Create")</li>
-            <li>@Html.ActionLink("Bulk invoer", "BulkInvoerKoppeling")</li>
+        <li>@Html.ActionLink("Nieuwe koppeling", "Create")</li>
+        <li>@Html.ActionLink("Bulk invoer", "BulkInvoerKoppeling")</li>
     }
 }
 <h2>Index</h2>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h3>Bedrijven</h3>
+    </div>
+    <div class="panel-body">
 
+        <div class="col-md-12">
+            <table class="table table-striped">
+                <tr>
+                    <th>
+                        Stagiair
+                    </th>
+                    <th>
+                        Stagedocent
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Periode.Periode1)
+                    </th>
+                    <th>
+                        Stagebegeleider
+                    </th>
+                    <th></th>
+                </tr>
 
-<table>
-    <tr>
-        <th>
-            Stagiair
-        </th>
-        <th>
-            Stagedocent
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Periode.Periode1)
-        </th>
-        <th>
-            Stagebegeleider
-        </th>
-        <th></th>
-    </tr>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Persoonsgegevens.Voornaam)
+                            @Html.DisplayFor(modelItem => item.Persoonsgegevens.Achternaam)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Persoonsgegevens1.Voornaam)
+                            @Html.DisplayFor(modelItem => item.Persoonsgegevens1.Achternaam)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Periode.Begindatum) - @Html.DisplayFor(modelItem => item.Periode.Begindatum)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Persoonsgegevens2.Voornaam)
+                            @Html.DisplayFor(modelItem => item.Persoonsgegevens2.Achternaam)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Details", "Details", new { id = item.StageID })
+                            @Html.ActionLink("Formulieren", "StudentIndex", "Formulier", new { id = item.StageID }, null)
+                        </td>
+                    </tr>
+                }
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Persoonsgegevens.Voornaam)
-                @Html.DisplayFor(modelItem => item.Persoonsgegevens.Achternaam)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Persoonsgegevens1.Voornaam)
-                @Html.DisplayFor(modelItem => item.Persoonsgegevens1.Achternaam)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Periode.Begindatum) - @Html.DisplayFor(modelItem => item.Periode.Begindatum) 
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Persoonsgegevens2.Voornaam)
-                @Html.DisplayFor(modelItem => item.Persoonsgegevens2.Achternaam)
-            </td>
-            <td>
-                @Html.ActionLink("Details", "Details", new { id = item.StageID })
-                @Html.ActionLink("Formulieren", "StudentIndex", "Formulier", new { id = item.StageID }, null)
-            </td>
-        </tr>
-    }
-
-</table>
+            </table>
+        </div>
+    </div>
+</div>
