--- a/PVB Stage Applicatie/Views/Periode/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Periode/Index.cshtml
@@ -5,41 +5,52 @@
 }
 
 @section zijMenu{
-        <li>@Html.ActionLink("Periode toevoegen", "Create")</li>
+    <li>@Html.ActionLink("Periode toevoegen", "Create")</li>
 }
 <h2>Index</h2>
 <p>@Html.Encode(ViewData["KanAanpassen"])</p>
-<table>
-    <tr>
-        <th>
-            Periode
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Begindatum)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Einddatum)
-        </th>
-        <th></th>
-    </tr>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h3>Bedrijven</h3>
+    </div>
+    <div class="panel-body">
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Periode1)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Begindatum)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Einddatum)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new {  id=item.Periode1  }) |
-            @Html.ActionLink("Details", "Details", new { id = item.Periode1 }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Periode1 })
-        </td>
-    </tr>
-}
+        <div class="col-md-12">
+            <table class="table table-striped">
+                <tr>
+                    <th>
+                        Periode
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Begindatum)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Einddatum)
+                    </th>
+                    <th></th>
+                </tr>
 
-</table>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Periode1)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Begindatum)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Einddatum)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", new { id = item.Periode1 }) |
+                            @Html.ActionLink("Details", "Details", new { id = item.Periode1 }) |
+                            @Html.ActionLink("Delete", "Delete", new { id = item.Periode1 })
+                        </td>
+                    </tr>
+                }
+
+            </table>
+        </div>
+    </div>
+</div>
