--- a/PVB Stage Applicatie/Views/Stagiair/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Stagiair/Index.cshtml
@@ -9,52 +9,61 @@
 {
     @section zijMenu
     {
-            <li>
-                @Html.ActionLink("Create New", "Create")
-            </li>
-            <li>
-                @Html.ActionLink("Bulk invoer", "BulkInvoerStagiair")
-            </li>
+        <li>
+            @Html.ActionLink("Create New", "Create")
+        </li>
+        <li>
+            @Html.ActionLink("Bulk invoer", "BulkInvoerStagiair")
+        </li>
     }
 
 }
-<div class="col-md-6">
-    <table class="table table-striped">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Voornaam)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Achternaam)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.StudentNummer)
-            </th>
-            <th></th>
-        </tr>
 
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Voornaam)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Achternaam)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.StudentNummer)
-                </td>
-                <td>
-                    @if (User.IsInRole("Beheerder"))
-                    {
-                        @Html.ActionLink("Edit", "Edit", new { id = item.PersoonsgegevensID}, new { @class = "btn btn-xs btn-info" })
-                    }
-                    @Html.ActionLink("Details", "Details", new { id = item.PersoonsgegevensID }, new { @class = "btn btn-xs btn-info" })
-                </td>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h3>Bedrijven</h3>
+    </div>
+    <div class="panel-body">
 
-            </tr>
-        }
+        <div class="col-md-12">
+            <table class="table table-striped">
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.StudentNummer)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Voornaam)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Achternaam)
+                    </th>
+                    <th></th>
+                </tr>
 
-    </table>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.StudentNummer)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Voornaam)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Achternaam)
+                        </td>
+
+                        <td>
+                            @if (User.IsInRole("Beheerder"))
+                            {
+                                @Html.ActionLink("Edit", "Edit", new { id = item.PersoonsgegevensID }, new { @class = "btn btn-xs btn-info" })
+                            }
+                            @Html.ActionLink("Details", "Details", new { id = item.PersoonsgegevensID }, new { @class = "btn btn-xs btn-info" })
+                        </td>
+
+                    </tr>
+                }
+            </table>
+        </div>
+    </div>
 </div>
