--- a/PVB Stage Applicatie/Views/Periode/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Periode/Index.cshtml
@@ -11,7 +11,7 @@
 <p>@Html.Encode(ViewData["KanAanpassen"])</p>
 <div class="panel panel-default">
     <div class="panel-heading">
-        <h3>Bedrijven</h3>
+        <h3>Periodes</h3>
     </div>
     <div class="panel-body">
 
