Fixed nonactief JQ

--- a/PVB Stage Applicatie/Views/Docent/Edit.cshtml
+++ b/PVB Stage Applicatie/Views/Docent/Edit.cshtml
@@ -12,18 +12,19 @@
         else {
             $("#NonActiefReden")[0].disabled = false;
         }
+
+        $("#Actief").change(function () {
+            if ($("#Actief")[0].checked) {
+                $("#NonActiefReden")[0].disabled = true;
+                $("#NonActiefReden")[0].value = "";
+            }
+            else {
+                $("#NonActiefReden")[0].disabled = false;
+            }
+        });
     });
 
-    $("#Actief").click(function () {
-        if ($("#Actief")[0].checked) {
-            debugger;
-            $("#NonActiefReden")[0].disabled = true;
-            $("#NonActiefReden")[0].value = "";
-        }
-        else {
-            $("#NonActiefReden")[0].disabled = false;
-        }
-    });
+
 </script>
 @{
     ViewBag.Title = "Edit";
