--- a/PVB Stage Applicatie/Views/Begeleider/Edit.cshtml
+++ b/PVB Stage Applicatie/Views/Begeleider/Edit.cshtml
@@ -6,26 +6,28 @@
             $("#Bedrijf")[0].disabled = false;
 
         }
+
         else {
             $("#NonActiefReden")[0].disabled = false;
             $("#Bedrijf")[0].disabled = true;
         }
+
+        $("#Actief").change(function () {
+            if ($("#Actief")[0].checked) {
+                debugger;
+                $("#NonActiefReden")[0].disabled = true;
+                $("#NonActiefReden")[0].value = "";
+                $("#Bedrijf")[0].disabled = false;
+
+            }
+            else {
+                $("#NonActiefReden")[0].disabled = false;
+                $("#Bedrijf")[0].disabled = true;
+                $("#Bedrijf")[0].value = "";
+            }
+        });
     });
 
-    $("#Actief").live("click", function () {
-        if ($("#Actief")[0].checked) {
-            debugger;
-            $("#NonActiefReden")[0].disabled = true;
-            $("#NonActiefReden")[0].value = "";
-            $("#Bedrijf")[0].disabled = false;
-
-        }
-        else {
-            $("#NonActiefReden")[0].disabled = false;
-            $("#Bedrijf")[0].disabled = true;
-            $("#Bedrijf")[0].value = "";
-        }
-    });
 </script>
 
 @{
