--- a/PVB Stage Applicatie/Views/Bedrijf/Edit.cshtml
+++ b/PVB Stage Applicatie/Views/Bedrijf/Edit.cshtml
@@ -1,17 +1,14 @@
 ﻿@model PVB_Stage_Applicatie.Models.Bedrijf
 <script>
     $(document).ready(function () {
-        if($("#Actief")[0].checked)
-        {
+        if ($("#Actief")[0].checked) {
             $("#NonActiefReden")[0].disabled = true;
         }
-        else
-        {
+        else {
             $("#NonActiefReden")[0].disabled = false;
         }
-    });
 
-    $("#Actief").live("click", function () {
+    $("#Actief").click( function () {
         if ($("#Actief")[0].checked) {
             debugger;
             $("#NonActiefReden")[0].disabled = true;
@@ -21,164 +18,133 @@
             $("#NonActiefReden")[0].disabled = false;
         }
     });
+    });
+
 </script>
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Bedrijf bewerken";
 }
 @section zijMenu{
-        <li>
-            @Html.ActionLink("Back to List", "Index")
-        </li>
-}
-<h2>Edit</h2>
+    <li>
+        @Html.ActionLink("Back to List", "Index")
+    </li>}
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary(true)
+    <div class="panel panel-default">
+        <div class="col-md-6">
+            <table class="table table-striped">
+                @Html.HiddenFor(model => model.BedrijfID)
+                <tr>
+                    <td class="editor-label">
+                        @Html.LabelFor(model => model.Naam)
+                    </td>
+                    <td class="editor-field">
+                        @Html.EditorFor(model => model.Naam)
+                        @Html.ValidationMessageFor(model => model.Naam)
+                    </td>
+                </tr>
+                <tr>
+                    <td class="editor-label">
+                        @Html.LabelFor(model => model.Actief)
+                    </td>
+                    <td class="editor-field">
+                        @Html.EditorFor(model => model.Actief)
+                        @Html.ValidationMessageFor(model => model.Actief)
+                    </td>
+                </tr>
+                <tr>
+                    <td class="editor-label">
+                        @Html.LabelFor(model => model.NonActiefReden)
+                    </td>
+                    <td class="editor-field">
+                        @Html.EditorFor(model => model.NonActiefReden)
+                        @Html.ValidationMessageFor(model => model.NonActiefReden)
+                    </td>
+                </tr>
+                <tr>
+                    <td class="editor-label">
+                        @Html.LabelFor(model => model.KvKNummer)
+                    </td>
+                    <td class="editor-field">
+                        @Html.EditorFor(model => model.KvKNummer)
+                        @Html.ValidationMessageFor(model => model.KvKNummer)
+                    </td>
+                </tr>
+                <tr>
+                    <td class="editor-label">
+                        @Html.LabelFor(model => model.Plaats)
+                    </td>
+                    <td class="editor-field">
+                        @Html.EditorFor(model => model.Plaats)
+                        @Html.ValidationMessageFor(model => model.Plaats)
+                    </td>
+                </tr>
+                <tr>
+                    <td class="editor-label">
+                        @Html.LabelFor(model => model.Straatnaam)
+                    </td>
+                    <td class="editor-field">
+                        @Html.EditorFor(model => model.Straatnaam)
+                        @Html.ValidationMessageFor(model => model.Straatnaam)
+                    </td>
+                </tr>
+                <tr>
+                    <td class="editor-label">
+                        @Html.LabelFor(model => model.Huisnummer)
+                    </td>
+                    <td class="editor-field">
+                        @Html.EditorFor(model => model.Huisnummer)
+                        @Html.ValidationMessageFor(model => model.Huisnummer)
+                    </td>
+                </tr>
+                <tr>
+                    <td class="editor-label">
+                        @Html.LabelFor(model => model.Toevoeging)
+                    </td>
+                    <td class="editor-field">
+                        @Html.EditorFor(model => model.Toevoeging)
+                        @Html.ValidationMessageFor(model => model.Toevoeging)
+                    </td>
+                </tr>
+                <tr>
+                    <td class="editor-label">
+                        @Html.LabelFor(model => model.Postcode)
+                    </td>
+                    <td class="editor-field">
+                        @Html.EditorFor(model => model.Postcode)
+                        @Html.ValidationMessageFor(model => model.Postcode)
+                    </td>
+                </tr>
+                <tr>
+                    <td class="editor-label">
+                        @Html.LabelFor(model => model.Telefoonnummer)
+                    </td>
+                    <td class="editor-field">
+                        @Html.EditorFor(model => model.Telefoonnummer)
+                        @Html.ValidationMessageFor(model => model.Telefoonnummer)
+                    </td>
+                </tr>
+                <tr>
+                    <td class="editor-label">
+                        @Html.LabelFor(model => model.Email)
+                    </td>
+                    <td class="editor-field">
+                        @Html.EditorFor(model => model.Email)
+                        @Html.ValidationMessageFor(model => model.Email)
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <input type="submit" class="btn btn-lg btn-default" value="Opslaan" />
+                    </td>
+                </tr>
 
-@using (Html.BeginForm()) {
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true)
-
-    @*<fieldset>
-        <legend>Bedrijf</legend>
-
-        @Html.HiddenFor(model => model.BedrijfID)
-        @Html.HiddenFor(model => model.Naam)
-
-
-
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Actief)
+            </table>
         </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Actief)
-            @Html.ValidationMessageFor(model => model.Actief)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.NonActiefReden)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.NonActiefReden)
-            @Html.ValidationMessageFor(model => model.NonActiefReden)
-        </div>
-
-        <p>
-            <input type="submit" value="Save" />
-        </p>
-        <p>@Html.Encode(ViewData["Foutmelding"])</p>
-    </fieldset>*@
-
-<div class="col-md-6">
-    <table class="table table-striped">
-        @Html.HiddenFor(model => model.BedrijfID)
-        <tr>
-            <td class="editor-label">
-                @Html.LabelFor(model => model.Naam)
-            </td>
-            <td class="editor-field">
-                @Html.EditorFor(model => model.Naam)
-                @Html.ValidationMessageFor(model => model.Naam)
-            </td>
-        </tr>
-        <tr>
-            <td class="editor-label">
-                @Html.LabelFor(model => model.Actief)
-            </td>
-            <td class="editor-field">
-                @Html.EditorFor(model => model.Actief)
-                @Html.ValidationMessageFor(model => model.Actief)
-            </td>
-        </tr>
-        <tr>
-            <td class="editor-label">
-                @Html.LabelFor(model => model.NonActiefReden)
-            </td>
-            <td class="editor-field">
-                @Html.EditorFor(model => model.NonActiefReden)
-                @Html.ValidationMessageFor(model => model.NonActiefReden)
-            </td>
-        </tr>
-        <tr>
-            <td class="editor-label">
-                @Html.LabelFor(model => model.KvKNummer)
-            </td>
-            <td class="editor-field">
-                @Html.EditorFor(model => model.KvKNummer)
-                @Html.ValidationMessageFor(model => model.KvKNummer)
-            </td>
-        </tr>
-        <tr>
-            <td class="editor-label">
-                @Html.LabelFor(model => model.Plaats)
-            </td>
-            <td class="editor-field">
-                @Html.EditorFor(model => model.Plaats)
-                @Html.ValidationMessageFor(model => model.Plaats)
-            </td>
-        </tr>
-        <tr>
-            <td class="editor-label">
-                @Html.LabelFor(model => model.Straatnaam)
-            </td>
-            <td class="editor-field">
-                @Html.EditorFor(model => model.Straatnaam)
-                @Html.ValidationMessageFor(model => model.Straatnaam)
-            </td>
-        </tr>
-        <tr>
-            <td class="editor-label">
-                @Html.LabelFor(model => model.Huisnummer)
-            </td>
-            <td class="editor-field">
-                @Html.EditorFor(model => model.Huisnummer)
-                @Html.ValidationMessageFor(model => model.Huisnummer)
-            </td>
-        </tr>
-        <tr>
-            <td class="editor-label">
-                @Html.LabelFor(model => model.Toevoeging)
-            </td>
-            <td class="editor-field">
-                @Html.EditorFor(model => model.Toevoeging)
-                @Html.ValidationMessageFor(model => model.Toevoeging)
-            </td>
-        </tr>
-        <tr>
-            <td class="editor-label">
-                @Html.LabelFor(model => model.Postcode)
-            </td>
-            <td class="editor-field">
-                @Html.EditorFor(model => model.Postcode)
-                @Html.ValidationMessageFor(model => model.Postcode)
-            </td>
-        </tr>
-        <tr>
-            <td class="editor-label">
-                @Html.LabelFor(model => model.Telefoonnummer)
-            </td>
-            <td class="editor-field">
-                @Html.EditorFor(model => model.Telefoonnummer)
-                @Html.ValidationMessageFor(model => model.Telefoonnummer)
-            </td>
-        </tr>
-        <tr>
-            <td class="editor-label">
-                @Html.LabelFor(model => model.Email)
-            </td>
-            <td class="editor-field">
-                @Html.EditorFor(model => model.Email)
-                @Html.ValidationMessageFor(model => model.Email)
-            </td>
-        </tr>
-        <tr>
-            <td colspan="2">
-                <input type="submit" class="btn btn-lg btn-default" value="Opslaan" />
-            </td>
-        </tr>
-
-</table>
     </div>
-}
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+    }
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
